--- a/index.html
+++ b/index.html
@@ -11,17 +11,24 @@
         <!-- jQuery library -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
+
+        <!-- Firebase Reference -->
+    	<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
     </head>
     <body>
-        <span id="computer-choice">Rock!!!</span>
+        <span id="player-one-choice">Rock!!!</span>
         <br><br>
-        <span id="player-choice">Paper!!!</span>
+        <span id="player-two-choice">Paper!!!</span>
         <br><br>
         <span id="who-won">Scissors!!!</span>
         <br><br>
-        <span id="computer-score"></span>
+        <span id="games-played"></span>
         <br><br>
-        <span id="player-score">Press r, p, or s</span>
+        <span id="player-one-wins"></span>
+        <br><br>
+        <span id="player-two-wins">Press r, p, or s</span>
+        <br><br>
+        <span id="player-count"></span>
     </body>           <!-- The GIF Tastic JavaScript -->
     <script src="assets/javascript/game.js"></script>
 </html>
