Basic Two Player Game

--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
         <span id="player-two-wins">Press r, p, or s</span>
         <br><br>
         <span id="player-count"></span>
-    </body>           <!-- The GIF Tastic JavaScript -->
+        <br><br><br><br>
+        <span id="player-info">Choose player 1 or 2 to Start</span>
+        <br><br>
+        <button id="clear-game">Start Over</button>
+    </body>           <!-- The JavaScript -->
     <script src="assets/javascript/game.js"></script>
 </html>
 </DOCTYPE>
