Spy-vs-Spy Style & fixes

--- a/index.html
+++ b/index.html
@@ -16,21 +16,23 @@
     	<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
     </head>
     <body>
-        <span id="player-one-choice">Rock!!!</span>
+        <img id="spy-v-spy-image" src="assets/images/images-1.jpeg" align="right" height=150px width=200px></img>
         <br><br>
-        <span id="player-two-choice">Paper!!!</span>
+        <span id="player-one-choice" class="white-spy">White Spy</span>
+        <br>
+        <span id="player-two-choice" class="black-spy">Black Spy</span>
         <br><br>
-        <span id="who-won">Scissors!!!</span>
+        <span id="who-won">Nobody Won</span>
         <br><br>
         <span id="games-played"></span>
         <br><br>
-        <span id="player-one-wins"></span>
+        <span id="player-one-wins" class="white-spy"></span>
         <br><br>
-        <span id="player-two-wins">Press r, p, or s</span>
+        <span id="player-two-wins" class="black-spy">Press <Strong>R, P, or S</Strong></span>
         <br><br>
         <span id="player-count"></span>
         <br><br><br><br>
-        <span id="player-info">Choose player 1 or 2 to Start</span>
+        <span id="player-info">Choose <Strong>W</Strong>hite or <Strong>B</Strong>lack to Start</span>
         <br><br>
         <button id="clear-game">Start Over</button>
     </body>           <!-- The JavaScript -->
