Work on Selecting Players

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <br><br>
         <span id="player-count"></span>
         <br><br><br><br>
-        <span id="player-info">Choose <Strong>W</Strong>hite or <Strong>B</Strong>lack to Start</span>
+        <span id="#player-info">Choose <Strong>W</Strong>hite or <Strong>B</Strong>lack to Start</span>
         <br><br>
         <button id="clear-game">Start Over</button>
     </body>           <!-- The JavaScript -->
