some cosmetic and other minor corrections

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta author="Mike Wrobel" description="Multiplyer RPS using Firebase for stats">
-        <title>Rock Paper Scissor - Multiplayer</title>
+        <title>Spy-v-Spy Rock Paper Scissor</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     
         <!-- Latest compiled and minified CSS -->
